     " # This has been warned since 2.4
     EOS


* The flip-flop syntax deprecation is reverted. [Feature #5400]

* Comment lines can be placed between fluent dot now.

    foo
      # .bar
      .baz # => foo.baz

* Calling a private method with a literal <code>self</code> as the receiver
  is now allowed. [Feature #11297] [Feature #16123]

=== Core classes updates (outstanding ones only)

Complex::

  New method::

    * Added Complex#<=>. So 0 <=> 0i will not raise NoMethodError. [Bug #15857]

Dir::

  Modified method::

    * Dir#glob and Dir#[] no longer allow NUL-separated glob pattern.
      Use Array instead.  [Feature #14643]

Encoding::

  * Added new encoding CESU-8 [Feature #15931]

Enumerable::

  New methods::

    * Added Enumerable#filter_map.  [Feature #15323]

    * Added Enumerable#tally.  [Feature #11076]

Enumerator::

  New method::

    * Added Enumerator::Lazy#eager that generates a non-lazy enumerator
      from a lazy enumerator.  [Feature #15901]

    * Added Enumerator::Yielder#to_proc so that a Yielder object
      can be directly passed to another method as a block
      argument.  [Feature #15618]

Fiber::

  New method::

    * Added Fiber#raise that behaves like Fiber#resume but raises an
      exception on the resumed fiber.  [Feature #10344]

FrozenError::

  New method::

    * Added FrozenError#receiver to return the frozen object that
      modification was attempted on.  To set this object when raising
      FrozenError in Ruby code, pass it as the second argument to
      FrozenError.new.

GC::

  New method::

    * Added GC.compact method for compacting the heap.
      This function compacts live objects in the heap so that fewer pages may
      be used, and the heap may be more CoW friendly. [Feature #15626]

      Details on the algorithm and caveats can be found here:
      https://bugs.ruby-lang.org/issues/15626

IO::

  New method::

    * Added IO#set_encoding_by_bom to check the BOM and set the external